<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gubanov.dmitry.cookie.CreateRewardActivity"
    tools:showIn="@layout/activity_create_reward">

    <EditText
        android:id="@+id/create_reward_activity_weight"
        android:inputType="number"
        android:hint="@string/reward_weight_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/create_reward_activity_type"
        android:hint="@string/reward_type_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/create_reward_activity_content"
        android:hint="@string/reward_content_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
